# investment-assistant

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  NEXT_STEPS.md  README.md  backtest.py  core_demo.py  daily_review.py  evaluate.py  note.md  pretrade.py  pyproject.toml  usage.md  weekly_review.py
architecture/: 99-ROADMAP.md  AGENT_ARCHITECTURE.md  BACKTEST_ENGINE.md  DATA_MODEL.md  DATA_PIPELINE.md  IMPLEMENTATION_STATUS.md  REVIEW_SYSTEM.md
config/: config.yaml
core/: SPECIFICATIONS.md  __init__.py  assess.py  config.py  daily_review.py  gather.py  indicators.py  legacy_import.py  memory.py  profiles.py  record.py  report.py  strategy.py
data/: watchlist.yaml
docs/: ARCHITECTURE.md  DATA_FLYWHEEL.md  README.zh-CN.md  REAL_PORTFOLIO_SETUP.md  REFACTOR_EXECUTION.md  REFACTOR_PLAN.md  STRATEGY_ENGINE.md  个人交易策略SOP_V4.md
investment_assistant/: config.py  setup.py
quant/: __init__.py  backtest.py  cache.py  clock.py  daily_report.py  decision.py  evaluate.py  indicators.py  levels.py  macro.py  manual_levels.py  market.py  models.py  news.py  observations.py  option_flow.py  options.py  pipeline.py  plotting.py  portfolio.py  prediction_markets.py  pretrade.py  pretrade_report.py  profiles.py  providers.py  report.py  roles.py  scoring.py  sectors.py  sentiment.py  valuation.py
scripts/: gen_levels.py  level_edge.py  snapshot_news.py  snapshot_options.py  snapshot_prediction_markets.py  snapshot_sentiment.py  validate_levels.py
spec/: 00-VISION.md  01-PHILOSOPHY.md  11-DECISION_LOOP.md  12-DECISION_INTELLIGENCE.md  14-EVALUATION_MODEL.md  (+3 more)
(+78 files in other folders)
