[project]
name = "investment-assistant"
version = "0.1.0"
description = "Personal investment assistant with zone alerts, digest, Telegram notifications, and web management UI."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "python-multipart>=0.0.9",
  "jinja2>=3.1.4",
  "yfinance>=0.2.54",
  "python-telegram-bot>=21.0",
  "schedule>=1.2.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.3.0",
]

[tool.uv]
package = false
