[project]
name = "investment-assistant"
version = "0.1.0"
description = "Weekly investment decision engine — codify a repeatable buy/sell/hedge process"
requires-python = ">=3.11"
dependencies = [
    "polars>=1.0",
    "pyarrow>=15.0",
    "yfinance>=0.2.40",
    "pyyaml>=6.0",
    "plotly>=5.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
include = ["quant*", "core*"]
